--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cep-promise": "^3.0.7",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-devtools": "^3.6.1",
